[gd_scene load_steps=12 format=2]

[ext_resource path="res://Star/Satrs.tscn" type="PackedScene" id=1]
[ext_resource path="res://Elements/Blocks/BounceBlock/BounceBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Star/Star.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/World1/Area1/Level8/Level8.gd" type="Script" id=4]
[ext_resource path="res://ball/ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Elements/Blocks/TileMaps/Obstacles/Obstacles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Elements/Arrow/Arrow_CentripetalAndCentrifugalForce/Arrow1and2.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "1"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Satrs/Star1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 80 ), Vector2( 200, 400 ), Vector2( 200, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Satrs/Star2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 280, 160 ), Vector2( 280, 400 ), Vector2( 280, 80 ), Vector2( 280, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Satrs/Star3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 240 ), Vector2( 360, 400 ), Vector2( 360, 80 ), Vector2( 360, 240 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Satrs/Star4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 320 ), Vector2( 440, 400 ), Vector2( 440, 80 ), Vector2( 440, 320 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Satrs/Star5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1040, 480 ), Vector2( 1040, 640 ), Vector2( 1040, 480 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Satrs/Star6:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 640 ), Vector2( 960, 480 ), Vector2( 960, 640 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 160, 20 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 160, 20 )

[node name="Level8" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimationPlayer1" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 1 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 4 )

[node name="Obstacles" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131094, 0, 0, 131095, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196630, 0, 0, 196631, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262166, 0, 0, 262167, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327702, 0, 0, 327703, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786440, 0, 0, 786441, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851976, 0, 0, 851977, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917512, 0, 0, 917513, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983048, 0, 0, 983049, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0 )

[node name="Arrow1" parent="." instance=ExtResource( 7 )]
position = Vector2( 240, 560 )

[node name="Arrow2" parent="." instance=ExtResource( 7 )]
position = Vector2( 680, 280 )

[node name="Arrow3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1040, 160 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 560, 560 )

[node name="Satrs" parent="." instance=ExtResource( 1 )]

[node name="Star1" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 200, 240 )

[node name="Star2" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 280, 320 )

[node name="Star3" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 360, 400 )

[node name="Star4" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 440, 320 )

[node name="Star5" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 1040, 640 )

[node name="Star6" parent="Satrs" instance=ExtResource( 3 )]
position = Vector2( 960, 480 )

[node name="BounceBlock" parent="." instance=ExtResource( 2 )]
position = Vector2( 405, 560 )
rotation = 1.5708
scale = Vector2( 1.2, 1 )

[node name="AnimatedSprite" parent="BounceBlock" index="0"]
animation = "1"

[node name="CollisionShape2D" parent="BounceBlock" index="1"]
shape = SubResource( 2 )

[node name="BounceBlock2" parent="." instance=ExtResource( 2 )]
position = Vector2( 875, 240 )
rotation = 4.71239

[node name="AnimatedSprite" parent="BounceBlock2" index="0"]
animation = "3"

[node name="CollisionShape2D" parent="BounceBlock2" index="1"]
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer1" to="." method="_on_AnimationPlayer1_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]

[editable path="BounceBlock"]
[editable path="BounceBlock2"]
